# anifeed

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: CD.yml  CI.yml  genrate_docuemtation.yml  python-app.yml
docs/: index.md
reference/: index.html
reference/SUMMARY/: index.html
reference/api/controllers/health_controller/: index.html
reference/api/main/: index.html
reference/api/routers/health_router/: index.html
reference/constants/anime_status_enum/: index.html
reference/constants/app_config/: index.html
reference/constants/nyaa_search_enum/: index.html
reference/db/database/: index.html
reference/db/mappers/: index.html
reference/db/repositories/interfaces/: index.html
reference/db/repositories/sqlite_anime_repository/: index.html
reference/db/repositories/sqlite_torrent_repository/: index.html
reference/exceptions/: index.html
reference/main/: index.html
reference/models/anime_model/: index.html
reference/models/config_model/: index.html
reference/models/nyaa_search_model/: index.html
reference/models/torrent_model/: index.html
reference/models/user_model/: index.html
reference/services/anime_service/: index.html
reference/services/anime_service_factory/: index.html
reference/services/apis/anilist_api/: index.html
reference/services/apis/base_api/: index.html
reference/services/apis/mal_api/: index.html
reference/services/apis/nyaa_api/: index.html
reference/services/parsers/anilist_parser/: index.html
reference/services/parsers/base_parser/: index.html
reference/services/parsers/mal_parser/: index.html
reference/services/parsers/nyaa_parser/: index.html
reference/services/similarity_service/: index.html
reference/services/torrent_service/: index.html
reference/utils/commons/: index.html
reference/utils/http_client/: index.html
reference/utils/log_utils/: index.html
scripts/: gen_reference.py
search/: search_index.json
src/anifeed/: __init__.py  config.toml  database.db-shm  database.db-wal  exceptions.py  main.py
src/anifeed/constants/: anime_status_enum.py  app_config.py  nyaa_search_enum.py
src/anifeed/db/: __init__.py  database.py  mappers.py
src/anifeed/db/repositories/: interfaces.py  sqlite_anime_repository.py  sqlite_torrent_repository.py
src/anifeed/db/sql/: 001_init.sql
src/anifeed/models/: __init__.py  anime_model.py  config_model.py  nyaa_search_model.py  torrent_model.py  user_model.py
src/anifeed/services/: __init__.py  anime_service.py  anime_service_factory.py  similarity_service.py  torrent_service.py
src/anifeed/services/apis/: __init__.py  anilist_api.py  base_api.py  mal_api.py  nyaa_api.py
src/anifeed/services/apis/anilist_api/: fetch_userlist.graphql
src/anifeed/services/parsers/: __init__.py  anilist_parser.py  base_parser.py  mal_parser.py  nyaa_parser.py
src/anifeed/utils/: __init__.py  commons.py  http_client.py  log_utils.py
tests/: conftest.py  test_models.py  utils.py
