[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anifeed"
version = "0.2.0"
description = "Parses data from an AniList user, serializes to a generic format, and broadcasts torrent data from the animes to a microservice using NyaaTorrents."
readme = "README.md"
authors = [
    { name = "Andre Carvalho Cerqueira", email = "alocksmasao@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests==2.32.5",
    "toml==0.10.2",
    "socketify==0.0.31",
    "beautifulsoup4==4.14.2",
    "sentence-transformers==5.1.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "uv==0.9.7",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocstrings[python]",
    "mkdocstrings-python>=0.7",
]

[project.scripts]
anifeed = "anifeed.main:main"
anifeed-api = "anifeed.api.main:run"
anifeed-db = "anifeed.db.database:init_db"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anifeed = ["*.toml", "*.graphql", "services/apis/anilist_api/*.graphql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/anifeed",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/anifeed"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
