[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anifeed"
version = "0.2.0"
requires-python = ">=3.10"
description = "Parses data from an AniList user, serializes to a generic format, and broadcasts torrent data from the animes to a microservice using NyaaTorrents."
readme = "README.md"
authors = [
    { name = "Andre Carvalho Cerqueira", email = "alocksmasao@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests==2.32.5",
    "toml==0.10.2",
    "socketify==0.0.31",
    "beautifulsoup4==4.14.2",
    "sentence-transformers==5.1.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
]
mkdocs = [
    "mkdocs-material==9.7.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocstrings-python==1.19.0",
]

[project.scripts]
anifeed = "anifeed.main:main"
anifeed-api = "anifeed.api.main:run"
anifeed-db = "anifeed.db.database:init_db"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anifeed = ["*.toml", "*.graphql", "services/apis/anilist_api/*.graphql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/anifeed",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/anifeed"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
